--- a/assets/index.html
+++ b/assets/index.html
@@ -10,7 +10,7 @@
     <script src="javascript/logic.js"></script>
 </head>
 <body>
-    <div class="js-gif"></div>
+    <div class="js-gif-box"></div>
 
 
 
