--- a/assets/index.html
+++ b/assets/index.html
@@ -10,6 +10,7 @@
     <script src="javascript/logic.js"></script>
 </head>
 <body>
+    <div class="js-button-box"></div>
     <div class="js-gif-box"></div>
 
 
